--- a/index.html
+++ b/index.html
@@ -72,6 +72,18 @@
             </section>
         </main>
 
+        <aside class="popup">
+            <div class="popup__container">
+                <button class="popup__close-btn"></button>
+                <h2 class="popup__title">Редактировать профиль</h2>
+                <div class="input">
+                    <input type="text" placeholder="Имя" class="input__text input__text_type_name">
+                    <input type="text" placeholder="О себе" class="input__text input__text_type_about">
+                </div>
+                <button class="popup__submit-btn">Сохранить</button>
+            </div>
+        </aside>
+
         <footer class="footer">
             <p class="footer__copyright">© 2020 Mesto Russia</p>
         </footer>
