--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@
             <div class="popup__container">
                 <button class="popup__close-btn"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <div class="input">
+                <form class="input">
                     <input type="text" placeholder="Имя" class="input__text input__text_type_name">
                     <input type="text" placeholder="О себе" class="input__text input__text_type_about">
-                </div>
-                <button class="popup__submit-btn">Сохранить</button>
+                    <button class="popup__submit-btn">Сохранить</button>
+                </form>
             </div>
         </aside>
 
@@ -88,5 +88,7 @@
             <p class="footer__copyright">© 2020 Mesto Russia</p>
         </footer>
     </div>
+
+    <script src="./script.js"></script>
 </body>
 </html>
