--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <main class="content">
             <section class="profile">
                 <div class="profile__content">
-                    <img src="./images/avatar.jpg" alt="Avatar" class="profile__avatar">
+                    <img src="./images/avatar.jpg" alt="Аватар" class="profile__avatar">
                     <div class="profile__info">
                     <h1 class="profile__name">Жак-Ив Кусто</h1>
                     <p class="profile__description">Исследователь океана</p>
