refactor: исправить ошибки

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
 
         <aside class="popup">
             <div class="popup__container">
-                <button type="reset" class="popup__close-btn"></button>
+                <button type="button" class="popup__close-btn"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <form name="input" class="input">
-                    <input name="input__text_type_name" type="text" placeholder="Имя" class="input__text input__text_type_name">
-                    <input name="input__text_type_about" type="text" placeholder="О себе" class="input__text input__text_type_about">
+                <form name="form" class="form">
+                    <input name="form__text_type_name" type="text" placeholder="Имя" class="form__text form__text_type_name">
+                    <input name="form__text_type_about" type="text" placeholder="О себе" class="form__text form__text_type_about">
                     <button type="submit" class="popup__submit-btn">Сохранить</button>
                 </form>
             </div>
@@ -90,6 +90,6 @@
         </footer>
     </div>
 
-    <script src="./script/script.js"></script>
+    <script src="./script/index.js"></script>
 </body>
 </html>
