--- a/index.html
+++ b/index.html
@@ -27,57 +27,15 @@
                 </div>
                 <button type="button" class="profile__add-btn"></button>
             </section>
-            <section class="elements">
-                <div class="element">
-                    <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачаевск" class="element__image">
-                    <div class="element__caption">
-                        <h2 class="element__name">Карачаевск</h2>
-                        <button type="button" class="element__like"></button>
-                    </div>
-                </div>
-                <div class="element">
-                    <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус" class="element__image">
-                    <div class="element__caption">
-                        <h2 class="element__name">Гора Эльбрус</h2>
-                        <button type="button" class="element__like"></button>
-                    </div>
-                </div>
-                <div class="element">
-                    <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай" class="element__image">
-                    <div class="element__caption">
-                        <h2 class="element__name">Домбай</h2>
-                        <button type="button" class="element__like"></button>
-                    </div>
-                </div>
-                <div class="element">
-                    <img src="./images/kirill-pershin-1404681-unsplash.jpg" alt="Гора Эльбрус" class="element__image">
-                    <div class="element__caption">
-                        <h2 class="element__name">Гора Эльбруsdfsdfsdfsdfsdfsdfsdfsdfsdfс</h2>
-                        <button type="button" class="element__like"></button>
-                    </div>
-                </div>
-                <div class="element">
-                    <img src="./images/kirill-pershin-1556355-unsplash.jpg" alt="Домбай" class="element__image">
-                    <div class="element__caption">
-                        <h2 class="element__name">Домбай</h2>
-                        <button type="button" class="element__like"></button>
-                    </div>
-                </div>
-                <div class="element">
-                    <img src="./images/kirill-pershin-1088404-unsplash.jpg" alt="Карачаевск" class="element__image">
-                    <div class="element__caption">
-                        <h2 class="element__name">Карачаево-Черкесск</h2>
-                        <button type="button" class="element__like"></button>
-                    </div>
-                </div>
+            <section class="elements">               
             </section>
         </main>
 
-        <aside class="popup">
+        <aside class="popup popup__type_edit-profile">
             <div class="popup__container">
-                <button type="button" class="popup__close-btn"></button>
+                <button type="button" class="popup__close-btn popup__close-btn_profile"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <form name="form" class="form">
+                <form name="form" class="form form__type_profile">
                     <input name="form__text_type_name" type="text" placeholder="Имя" class="form__text form__text_type_name">
                     <input name="form__text_type_about" type="text" placeholder="О себе" class="form__text form__text_type_about">
                     <button type="submit" class="popup__submit-btn">Сохранить</button>
@@ -85,11 +43,43 @@
             </div>
         </aside>
 
+        <aside class="popup popup__type_add-card">
+            <div class="popup__container">
+                <button type="button" class="popup__close-btn popup__close-btn_new-card"></button>
+                <h2 class="popup__title">Новое место</h2>
+                <form name="form" class="form form__type_card">
+                    <input name="form__text_type_name" type="text" placeholder="Название" class="form__text form__text_type_label">
+                    <input name="form__text_type_about" type="text" placeholder="Ссылка на картинку" class="form__text form__text_type_link">
+                    <button type="submit" class="popup__submit-btn">Создать</button>
+                </form>
+            </div>
+        </aside>
+
+        <aside class="popup popup__type_view-card">
+            <div class="popup__img-container">
+                <button type="button" class="popup__close-btn popup__close-btn_card"></button>
+                <img src="" alt="" class="popup__image">
+                <h3 class="popup__caption"></h3>
+            </div>
+        </aside>                                                                                                                                                                                                                                                                       
+
         <footer class="footer">
             <p class="footer__copyright">© 2020 Mesto Russia</p>
         </footer>
     </div>
 
+    <template class="card-template">
+        <div class="element">
+            <button type="button" class="element__trash"></button>
+            <img src="" alt="" class="element__image">
+            <div class="element__caption">
+                <h2 class="element__name"></h2>
+                <button type="button" class="element__like"></button>
+            </div>
+        </div>
+    </template>
+
+    <script src="./script/cards.js"></script>
     <script src="./script/index.js"></script>
 </body>
 </html>
