refactor: проверить валидотором

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <aside class="popup popup__type_view-card">
             <div class="popup__img-container">
                 <button type="button" class="popup__close-btn popup__close-btn_card"></button>
-                <img src="" alt="" class="popup__image">
+                <img src="/" alt="" class="popup__image">
                 <h3 class="popup__caption"></h3>
             </div>
         </aside>                                                                                                                                                                                                                                                                       
@@ -71,7 +71,7 @@
     <template class="card-template">
         <div class="element">
             <button type="button" class="element__trash"></button>
-            <img src="" alt="" class="element__image">
+            <img src="/" alt="" class="element__image">
             <div class="element__caption">
                 <h2 class="element__name"></h2>
                 <button type="button" class="element__like"></button>
