--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
             </section>
         </main>
 
-        <aside class="popup popup__type_edit-profile">
+        <aside class="popup popup__type_edit_profile">
             <div class="popup__container">
                 <button type="button" class="popup__close-btn popup__close-btn_profile"></button>
                 <h2 class="popup__title">Редактировать профиль</h2>
-                <form name="form" class="form form__type_profile">
+                <form name="form" class="form form__type-profile">
                     <input name="form__text_type_name" type="text" placeholder="Имя" class="form__text form__text_type_name">
                     <input name="form__text_type_about" type="text" placeholder="О себе" class="form__text form__text_type_about">
                     <button type="submit" class="popup__submit-btn">Сохранить</button>
@@ -43,11 +43,11 @@
             </div>
         </aside>
 
-        <aside class="popup popup__type_add-card">
+        <aside class="popup popup__type_add_card">
             <div class="popup__container">
                 <button type="button" class="popup__close-btn popup__close-btn_new-card"></button>
                 <h2 class="popup__title">Новое место</h2>
-                <form name="form" class="form form__type_card">
+                <form name="form" class="form form__type-card">
                     <input name="form__text_type_name" type="text" placeholder="Название" class="form__text form__text_type_label">
                     <input name="form__text_type_about" type="text" placeholder="Ссылка на картинку" class="form__text form__text_type_link">
                     <button type="submit" class="popup__submit-btn">Создать</button>
@@ -55,7 +55,7 @@
             </div>
         </aside>
 
-        <aside class="popup popup__type_view-card">
+        <aside class="popup popup__type_view_card">
             <div class="popup__img-container">
                 <button type="button" class="popup__close-btn popup__close-btn_card"></button>
                 <img src="/" alt="" class="popup__image">
