--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body class="container">
     <div class="page">
         <header class="header">
-            <img src="./images/Vector.svg" alt="Логотип" class="header__logo">
+            <a href="./index.html" class="header__main"><img src="./images/Vector.svg" alt="Логотип" class="header__logo"></a>
+            <nav class="header__menu">
+                <a href="./information.html" class="header__information">О приложении</a>
+            </nav>
         </header>
 
         <main class="content">
