--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
         </div>
     </template>
 
-    <script src="./script/validate.js"></script>
-    <script src="./script/cards.js"></script>
-    <script src="./script/index.js"></script>
+    <script type="module" src="./script/cards.js"></script>
+    <script type="module" src="./script/index.js"></script>
+    <script type="module" src="./script/Card.js"></script>
+    <script type="module" src="./script/FormValidator.js" ></script>
 </body>
 </html>
