--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <section class="profile">
                 <div class="profile__content">
                     <button type="button" aria-label="Редактировать" class="profile__avatar-btn"></button>
-                    <img src="" alt="Аватар" class="profile__avatar">
+                    <img src="/" alt="Аватар" class="profile__avatar">
                     <div class="profile__info">
                         <div class="profile__text">
                             <h1 class="profile__name"></h1>
@@ -80,8 +80,8 @@
                 <button type="button" aria-label="Закрыть" class="popup__close-btn"></button>
                 <h2 class="popup__title">Обновить аватар</h2>
                 <form name="form" class="form form_type-avatar" novalidate>
-                    <input name="avatar" type="url" placeholder="Ссылка на картинку" class="form__text form__text_type_link" id="link-input" required>
-                    <span class="form__input-error link-input-error"></span>
+                    <input name="avatar" type="url" placeholder="Ссылка на картинку" class="form__text form__text_type_avatar" id="avatar-input" required>
+                    <span class="form__input-error avatar-input-error"></span>
                     <button type="submit" class="popup__submit-btn popup__submit-btn_avatar">Сохранить</button>
                 </form>
             </div>
