--- a/src/index.html
+++ b/src/index.html
@@ -80,8 +80,8 @@
                 <button type="button" aria-label="Закрыть" class="popup__close-btn"></button>
                 <h2 class="popup__title">Обновить аватар</h2>
                 <form name="form" class="form form_type-avatar" novalidate>
-                    <input name="avatar" type="url" placeholder="Ссылка на картинку" class="form__text form__text_type_link" required>
-                    <span class="form__input-error link-input-error"></span>
+                    <input name="avatar" type="url" placeholder="Ссылка на картинку" class="form__text form__text_type_avatar" id="avatar-input" required>
+                    <span class="form__input-error avatar-input-error"></span>
                     <button type="submit" class="popup__submit-btn popup__submit-btn_avatar">Сохранить</button>
                 </form>
             </div>
